log
Thu 09 May 2024 08:29:06 PM UTC: 
 tests:  1|8
total_score: 0/70
138e3d9
Thu 09 May 2024 08:30:17 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b2789aa
Thu 09 May 2024 08:31:39 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3c32210
Thu 09 May 2024 08:31:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f605c6c
Thu 09 May 2024 08:32:45 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
5195686
Thu 09 May 2024 08:34:09 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  12|6
total_score: 15/70
76c3c41
Thu 09 May 2024 08:35:45 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  12|6
total_score: 15/70
450273e
Thu 09 May 2024 08:37:40 PM UTC: 
 treemap.c | 22 +++-------------------
 1 file changed, 3 insertions(+), 19 deletions(-)
 tests:  12|6
total_score: 15/70
4b4788d
Thu 09 May 2024 08:41:45 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:71:34: error: too many arguments to function ‘createTreeMap’
   71 |                     aux->right = createTreeMap(key,value);
      |                                  ^~~~~~~~~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:71:32: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   71 |                     aux->right = createTreeMap(key,value);
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
7790c98
